--- a/src/assets/css/themes/_variables.scss
+++ b/src/assets/css/themes/_variables.scss
@@ -1,1 +1,2 @@
 $link-decoration: none;
+$min-contrast-ratio: 3;
